[package]
name = "pssharp-fe"
version = "0.1.0"
authors = ["Caleb Frederickson <caleb.frederickson@gmail.com>"]
description = "Front-End framework for the PSSharp website"
license = "MIT/Apache-2.0"
repository = "https://github.com/stroniax/stroniax.github.io"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "Document",
    "console",
    "DomTokenList",
    "Element",
    "MediaQueryList",
    "Window",
    "Storage",
    "Node",
    "MouseEvent",
    "NodeList",
] }
